[workspace]
members = [
    "structured-concurrency",
    "understand-future",
    "understand-pin",
    "tmp",
    "memory-distribution",
    "learn-box",
    "builder-complex-types",
    "simple-web-server",
    "multi-server",
    "non-blocking-server",
    "deref-trait",
    "multiplexed-server",
    "async-server",
    "functional-server",
    "graceful-server",
    "tokio-timer-test",
]

[workspace.dependencies]
futures-concurrency = "7.3.0"
async-std = "1.12.0"
tokio = { version = "1.28.2", features = ["full"] }
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
futures = "0.3"
